# biu-tui

./: .gitignore  AGENTS.md  Cargo.toml
docs/plans/: 2026-02-28-biu-tui-app-design.md  2026-02-28-biu-tui-app.md  2026-03-01-playing-list-design.md  2026-03-01-playing-list.md  2026-03-01-settings-system-design.md  2026-03-01-settings-system.md  2026-03-01-ux-redesign-design.md  2026-03-01-ux-redesign.md  2026-03-02-infinite-scroll-design.md  2026-03-02-infinite-scroll.md  2026-03-02-mpris-integration-design.md  2026-03-02-mpris-integration.md  2026-03-02-space-toggle-playback-design.md  2026-03-02-space-toggle-playback.md  2026-03-03-playback-speed-design.md  2026-03-03-playback-speed.md  2026-03-03-search-functionality-design.md  2026-03-03-search-functionality.md  2026-03-06-vim-seek-controls-design.md  2026-03-06-vim-seek-controls.md  2026-03-24-seek-navigation-design.md  2026-03-24-seek-navigation.md
src/: app.rs  input.rs  lib.rs  main.rs  mpris.rs
src/api/: auth.rs  client.rs  favorite.rs  history.rs  mod.rs  player.rs  types.rs
src/audio/: decoder.rs  mod.rs  player.rs
src/download/: extractor.rs  manager.rs  mod.rs
src/playing_list/: mod.rs
src/screens/: library.rs  login.rs  mod.rs  search.rs  settings.rs
src/storage/: config.rs  cookies.rs  mod.rs  playing_list.rs  settings.rs
src/ui/: mod.rs  theme.rs
src/ui/widgets/: mod.rs  qrcode.rs  search_bar.rs
tests/: mpris_test.rs
